"Unsupported channel layout" when rendering with AAC audio output #56905

Closed
opened 2018-09-24 20:30:48 +02:00 by Maycne Sonahoz · 3 comments

System Information
Manjaro Linux
MSI GTX 660Ti

Blender Version
Broken: 2.80-2abbe1d125f
Worked: 2.79b

Short description of error
In Blender VSE, when rendering a video with AAC as audio codec for output, the rendering fails with an "Unsupported channel layout" error from ffmpeg.

Exact steps for others to reproduce the error
The following archive contains a simple project. Rendering it with AAC audio codec output will fail with :
[aac @ 0x7f49e48cba00] Unsupported channel layout
blender-aac.tar.gz

NB: This bug was actually discovered months ago when ffmpeg 4.0 was pushed on Manjaro (and Arch): https://bugs.archlinux.org/task/59828

**System Information** Manjaro Linux MSI GTX 660Ti **Blender Version** Broken: 2.80-2abbe1d125f Worked: 2.79b **Short description of error** In Blender VSE, when rendering a video with AAC as audio codec for output, the rendering fails with an "Unsupported channel layout" error from ffmpeg. **Exact steps for others to reproduce the error** The following archive contains a simple project. Rendering it with AAC audio codec output will fail with : `[aac @ 0x7f49e48cba00] Unsupported channel layout` [blender-aac.tar.gz](https://archive.blender.org/developer/F4808470/blender-aac.tar.gz) NB: This bug was actually discovered months ago when ffmpeg 4.0 was pushed on Manjaro (and Arch): https://bugs.archlinux.org/task/59828
Author

Added subscriber: @MaycneSonahoz

Added subscriber: @MaycneSonahoz

This issue was referenced by 45271007cf

This issue was referenced by 45271007cfaf4a515bb73530c48c33dab27b0d39

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56905
No description provided.