Fix T56905: unsupported channel layout error writing AAC audio.

This uses same mapping as Audaspace to specify channel layout, which was
missing before.